# vc3

./: .gitignore  CMakeLists.txt  README.md
include/core/: log.h  util.h
include/vm/: instr.h  io.h  loader.h  memory.h  vm.h
src/: main.c
src/core/: log.c  util.c
src/vm/: instr.c  io.c  loader.c  memory.c  vm.c
